# alembic-rs

./: .gitattributes  .gitignore  AGENTS.md  BUGHUNT_REPORT.md  CHANGELOG.md  Cargo.toml  DIAGRAMS.md  EV.md  FINDINGS.md  LICENSE  PARITY.md  PLAN3.md  README.md  TODO.md  bootstrap.ps1  bootstrap.py  bootstrap.sh  build.rs  check_uvs.rs  findings.md  hunt.md  perf_output.txt  plan1.md  plan2.md  pyproject.toml  task.md  test_floor.py  test_heart_parity.abc  test_spooky_empty.rs  test_write.rs  undoable.md
.claude/: ralph-loop.local.md
.claude/commands/: ral.md
crates/abc/: Cargo.toml
crates/abc/src/: main.rs
crates/alembic-viewer/: Cargo.toml
crates/alembic-viewer/src/: app.rs  camera.rs  environment.rs  lib.rs  main.rs  mesh_converter.rs  renderer.rs  settings.rs  shadow.rs  viewport.rs
crates/murmur3/: Cargo.toml
crates/murmur3/src/: lib.rs
crates/spooky-hash/: Cargo.toml
crates/spooky-hash/src/: lib.rs
crates/standard-surface/: Cargo.toml
crates/standard-surface/src/: lib.rs  params.rs
crates/standard-surface/src/shaders/: standard_surface.wgsl
data/: bed.abc  chess3.abc  feng.abc  floor.abc  gluk.abc  heart.abc  mask_p310.abc  mask_p360.abc
data/Abc/: bmw_turnaround.cmd  chess3.abc  chess4.abc  eng.abc  feng.abc  floor.abc  gears_turnaround.cmd  mask_p310.abc  mask_p360.abc  test.abc  test2.abc
data/HDR/: dh-381ll_bw.hdr  pillnitz_park2_latlong.hdr  stinsonbeach.hdr  studio_small_03_1k.hdr
docs/: book.toml
docs.old/: PLAN.md  PLAN2.md
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: custom-properties.md  materials.md  performance.md
docs/src/getting-started/: installation.md  quickstart.md
docs/src/python/: animation.md  geometry.md  overview.md  reading.md  writing.md
docs/src/reference/: data-types.md  schemas.md
docs/src/rust/: animation.md  geometry.md  overview.md  properties.md  reading.md  writing.md
examples/: debug_floor.rs  rust_test_triangle.rs
examples/python/: hierarchy.py
plans/: BUGHUNT_REPORT.md  FINDINGS.md  PLAN_1.md  PLAN_2.md  findings.md  plan2.md  plan3.md
python/alembic_rs/: __init__.py  __init__.pyi
python/examples/: README.md  animation.py  basic_read.py  basic_write.py
python/tests/: conftest.py  test_objects.py  test_properties.py  test_visibility.py
python_tests/: pytest.ini  test_animation.py  test_archive.py  test_geometry.py
reports/: PLAN.md  task.md
scripts/: bmw_roundtrip.ps1
spooky-hash/: Cargo.toml
spooky-hash/src/: lib.rs
src/: lib.rs  main.rs
src/abc/: mod.rs
src/collection/: mod.rs  schema.rs
src/core/: cache.rs  compression.rs  header.rs  metadata.rs  mod.rs  sample.rs  time_sampling.rs  traits.rs
src/geom/: camera.rs  curves.rs  faceset.rs  geom_param.rs  light.rs  mod.rs  nupatch.rs  points.rs  polymesh.rs  subd.rs  util.rs  visibility.rs  xform.rs
src/material/: mod.rs  schema.rs
src/ogawa/: abc_impl.rs  format.rs  mod.rs  read_util.rs  reader.rs  writer.rs
src/ogawa/writer/: archive.rs  constants.rs  mod.rs  object.rs  property.rs  stream.rs  tests.rs  write_util.rs
src/ogawa/writer/archive/: data.rs  deferred.rs  metadata.rs  mod.rs  objects.rs  properties.rs  types.rs
src/ogawa/writer/schema/: camera.rs  collections.rs  curves.rs  faceset.rs  light.rs  material.rs  mod.rs  nupatch.rs  points.rs  polymesh.rs  subd.rs  util.rs  xform.rs
src/python/: archive.rs  geom.rs  materials.rs  mod.rs  object.rs  properties.rs  schemas.rs  time_sampling.rs  write.rs
src/util/: data_type.rs  dimensions.rs  error.rs  math.rs  mod.rs  pod.rs
src/viewer/: AGENTS.md  COORD_PLAN.md  DIAGRAMS.md  app.rs  camera.rs  environment.rs  export.rs  mesh_converter.rs  mod.rs  plan1.md  renderer.rs  settings.rs  smooth_normals.rs  viewport.rs  worker.rs
src/viewer/pathtracer/: PLAN.md  blit.wgsl  build.rs  bvh.rs  bvh_traverse.wgsl  compute.rs  gpu_data.rs  mod.rs  scene_convert.rs
src/viewer/renderer/: mod.rs  passes.rs  pipelines.rs  postfx.rs  resources.rs  shaders.rs
src/viewer/renderer/shaders/: highlight.wgsl  object_id.wgsl  outline.wgsl
test_output/: acyclic_sampling.abc  archive_metadata.abc  cyclic_sampling.abc
tests/: compare_cpp.rs  compare_gears_out.rs  copy_heart_test.rs  debug_brake_disc_positions.rs  debug_ogawa_structure.rs  debug_viewer_collect.rs  debug_xform.rs  dump_heart.rs  minimal_hexdump.rs  read_files.rs  write_tests.rs
tests/cpp_parity/: CMakeLists.txt  test_xform.cpp
