[workspace]
members = [".", "crates/murmur3", "crates/spooky-hash", "crates/standard-surface"]

[package]
name = "alembic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust implementation of Alembic (.abc) 3D interchange format"
keywords = ["3d", "graphics", "animation", "vfx", "alembic"]
categories = ["multimedia", "graphics", "parser-implementations"]
readme = "README.md"
authors = ["Alex Khalyavin <joss13@gmail.com>"]
repository = "https://github.com/ssoj13/alembic-rs"

[dependencies]
half = { version = "2.4", features = ["bytemuck"] }
memmap2 = "0.9"
glam = { version = "0.29", features = ["bytemuck", "mint"] }
byteorder = "1.5"
thiserror = "2.0"
parking_lot = "0.12"
smallvec = "1.13"
bytemuck = { version = "1.21", features = ["derive"] }
flate2 = "1.0"
serde_json = "1.0"
murmur3 = { path = "crates/murmur3" }
spooky-hash = { path = "crates/spooky-hash" }

# Optional
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
standard-surface = { path = "crates/standard-surface", optional = true }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu"], optional = true }
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }
wgpu = { version = "24", optional = true }
dolly = { version = "0.6", optional = true }
mint = { version = "0.5", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
anyhow = { version = "1.0", optional = true }
rfd = { version = "0.15", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
dirs = { version = "6.0", optional = true }
image = { version = "0.25", default-features = false, features = ["hdr", "exr"], optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "alembic-cli"
path = "src/bin/alembic/main.rs"

[features]
default = ["mmap", "viewer"]
mmap = []
python = ["pyo3"]
viewer = [
    "standard-surface", "eframe", "egui", "egui-wgpu", "wgpu",
    "dolly", "mint", "log", "env_logger", "anyhow", "rfd", "serde", "dirs", "image",
]
