[workspace]
members = [".", "crates/murmur3", "crates/spooky-hash", "crates/standard-surface"]

[package]
name = "alembic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust implementation of Alembic (.abc) 3D interchange format"
keywords = ["3d", "graphics", "animation", "vfx", "alembic"]
categories = ["multimedia", "graphics", "parser-implementations"]
readme = "README.md"
authors = ["Alex Khalyavin <joss13@gmail.com>"]
repository = "https://github.com/ssoj13/alembic-rs"

[dependencies]
half = { version = "2.7", features = ["bytemuck"] }
memmap2 = "0.9"
glam = { version = "0.30", features = ["bytemuck", "mint"] }
byteorder = "1.5"
thiserror = "2.0"
parking_lot = "0.12"
rayon = "1.10"
smallvec = "1.15"
bytemuck = { version = "1.24", features = ["derive", "extern_crate_alloc"] }
flate2 = "1.1"
serde_json = "1.0"
murmur3 = { path = "crates/murmur3" }
spooky-hash = { path = "crates/spooky-hash" }

# Optional
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
standard-surface = { path = "crates/standard-surface", optional = true }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu"], optional = true }
egui = { version = "0.33", optional = true }
egui-wgpu = { version = "0.33", optional = true }
wgpu = { version = "27", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
anyhow = { version = "1.0", optional = true }
rfd = { version = "0.17", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
dirs = { version = "6.0", optional = true }
image = { version = "0.25", default-features = false, features = ["hdr", "exr"], optional = true }
tracing = "0.1"
tracing-chrome = { version = "0.7", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "env-filter"] }


[dev-dependencies]
tempfile = "3"

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }

[[bin]]
name = "alembic-cli"
path = "src/bin/alembic/main.rs"

[features]
default = ["mmap", "viewer"]
mmap = []
python = ["pyo3"]
viewer = [
    "standard-surface", "eframe", "egui", "egui-wgpu", "wgpu",
    "log", "env_logger", "anyhow", "rfd", "serde", "dirs", "image",
    "tracing-chrome",
]

# Optimize heavy deps in debug builds to avoid UI/render stutters
[profile.dev.package.wgpu]
opt-level = 2
[profile.dev.package.naga]
opt-level = 2
[profile.dev.package.egui]
opt-level = 2
[profile.dev.package.eframe]
opt-level = 2
[profile.dev.package.egui-wgpu]
opt-level = 2
[profile.dev.package.flate2]
opt-level = 2
