[package]
name = "spooky-hash"
version = "0.1.0"
edition = "2021"
description = "SpookyHash V2 - Bob Jenkins' 128-bit non-cryptographic hash (Alembic-compatible)"
license = "BSD-3-Clause"
repository = "https://github.com/konton/alembic-rs"
keywords = ["hash", "spooky", "alembic", "non-cryptographic"]
categories = ["algorithms", "no-std"]

[dependencies]

[features]
default = []
