[package]
name = "abc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool for Alembic (.abc) 3D files"

[dependencies]
# Core alembic library
alembic = { path = "../.." }

# Math
glam = "0.29"

# JSON output
serde_json = "1.0"

# Viewer (optional, enabled by default)
alembic-viewer = { path = "../alembic-viewer", optional = true }

[features]
default = ["viewer"]
viewer = ["alembic-viewer"]

[[bin]]
name = "abc"
path = "src/main.rs"
