[package]
name = "standard-surface"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Autodesk Standard Surface shader for wgpu (WGSL port of MaterialX)"
repository = "https://github.com/ssoj13/alembic-rs"
keywords = ["pbr", "shader", "wgpu", "materialx", "standard-surface"]
categories = ["rendering", "graphics"]
readme = "README.md"

[dependencies]
wgpu = "24"
bytemuck = { version = "1.21", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
